bynkc/tests/fixtures/negative/354_embeds_unknown_variant/input.bynk
commons demo.eu
type E = enum { X }
type S = | A(e: E) embeds E as Nope
